fix columns on mobile and in editor

--- a/assets/scss/layout/_columns.scss
+++ b/assets/scss/layout/_columns.scss
@@ -25,7 +25,7 @@
 }
 
 .is-column {
-	flex: var(--flex, var(--flex-default));
+	flex: var(--flex, var(--flex-xs, var(--flex-default)));
 	order: var(--order, unset);
 
 	@include mq(false, sm) {
